--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,10 +4,5 @@
     "ghcr.io/devcontainers/features/docker-in-docker:2.11.0": {},
     "ghcr.io/devcontainers/features/nix:1.2.0": {}
   },
-  "remoteUser": "developer",
-  "portsAttributes": {
-    "2222": {
-      "label": "SSH Server"
-    }
-  }
+  "remoteUser": "developer"
 }
