--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,12 @@
 {
-  "name": "HopeChain Dev Container",
-  "features": {
-    "ghcr.io/devcontainers/features/docker-in-docker:2.11.0": {},
-    "ghcr.io/devcontainers/features/nix:1.2.0": {}
+  "name": "HopeChain Android Dev Container",
+  "image": "mcr.microsoft.com/devcontainers/kotlin:latest",
+  "customizations": {
+    "vscode": {
+      "settings": {
+        "terminal.integrated.defaultProfile.linux": "bash"
+      }
+    }
   },
-  "remoteUser": "vscode"
+  "postCreateCommand": "sdk install java 17.0.8-tem && sdk install gradle"
 }
